syntax = "proto3";

package demo;

service DemoService {
  rpc GetHello (HelloRequest) returns (HelloResponse) {}
  rpc Sum (SumRequest) returns (SumResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message SumRequest {
  int32 a = 1;
  int32 b = 2;
}

message SumResponse {
  int32 result = 1;
}
