import { Controller } from '@nestjs/common';
import { DemoService } from './demo.service';
import { DemoServiceController, DemoServiceControllerMethods, HelloRequest, HelloResponse, SumRequest, SumResponse } from '../common/proto/demo';

@Controller()
@DemoServiceControllerMethods()
export class DemoController implements DemoServiceController {
  constructor(private readonly demoService: DemoService) { }

  getHello(request: HelloRequest): HelloResponse {
    console.log('üì® Recibida solicitud:', request);
    try {
      const response = this.demoService.getHello(request);
      console.log('‚úÖ Enviando respuesta:', response);
      return response;
    } catch (error) {
      console.error('‚ùå Error en controlador:', error);
      throw error;
    }
  }

  sum(request: SumRequest): SumResponse {
    console.log('üì® Recibida solicitud suma:', request);
    return this.demoService.sum(request);
  }
}
